k8s/app/ingress/jobgo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobgo-ingress
  namespace: mycoder-dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
